--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
+    "framer-motion": "^12.23.12",
     "imagekit": "^6.0.0",
     "inngest": "^3.39.1",
     "lucide-react": "^0.474.0",
